--- a/directory.cabal
+++ b/directory.cabal
@@ -74,6 +74,8 @@ Library
         base     >= 4.5 && < 4.9,
         time     >= 1.4 && < 1.6,
         filepath >= 1.3 && < 1.5
+    if impl(ghcjs)
+        build-depends: ghcjs-prim
     if os(windows)
         build-depends: Win32 >= 2.2.2 && < 2.4
     else
